--- a/app/_includes/head.html
+++ b/app/_includes/head.html
@@ -7,7 +7,7 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description | strip_newlines }}{% endif %}">
 
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
-  <link rel="canonical" href="{{site.url}}/{{site.baseurl}}{{ page.url | replace:'index.html',''}}">
+  <link rel="canonical" href="{{site.url}}{{ page.url | replace:'index.html',''}}">
   <link rel="icon" href="{{site.baseurl}}/assets/img/favicon.png">
  
 </head>
