Make links to /docs/ point to / instead

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,12 +1,12 @@
 <a href="#main" class="sr-only sr-only-focusable">Skip to main content</a>
 
 <header class="site-header">
-  <a href="{{ site.baseurl }}/"><img alt="DASH: Digital Access to Scholarship at Harvard. A Service of the Office for Scholarly Communication" src="{{site.baseurl}}/assets/img/dash_logo.gif"></a>
+  <a href="/"><img alt="DASH: Digital Access to Scholarship at Harvard. A Service of the Office for Scholarly Communication" src="{{site.baseurl}}/assets/img/dash_logo.gif"></a>
 </header>
 
 <nav role="navigation" aria-label="main">
   <ul class="nav nav-pills">
-      <li><a href="{{ site.baseurl }}/" >DASH Home</a></li>
+      <li><a href="/" >DASH Home</a></li>
       <li><a href="http://dash.harvard.edu/community-list" >Browse &amp; Search</a></li>
       <li><a href="{{ site.baseurl }}/mydash/" >DASH Stats</a></li>
       <li class="dropdown">
