Links to stories using absolute url instead of relative.

--- a/app/_includes/sidebars/default.html
+++ b/app/_includes/sidebars/default.html
@@ -22,7 +22,7 @@
           <span>26,413 works</span></a>
     </div>
     <div role="tabpanel" class="tab-pane" id="stories">
-          <a href="{{site.baseurl}}/stories"><img src="{{site.baseurl}}/assets/img/stories.png" alt="" height="92" width="138">
+          <a href="https://dash.harvard.edu/stories"><img src="{{site.baseurl}}/assets/img/stories.png" alt="" height="92" width="138">
           <span>1,277 user stories</span></a>
     </div>
   </div>
