Add stories link to nav; cleanup nav markup.

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -6,29 +6,29 @@
 
 <nav role="navigation" aria-label="main">
   <ul class="nav nav-pills">
-      <li><a href="/" >DASH Home</a></li>
-      <li><a href="http://dash.harvard.edu/community-list" >Browse &amp; Search</a></li>
-      <li><a href="{{ site.baseurl }}/mydash/" >DASH Stats</a></li>
-      <li class="dropdown">
-          <a href="#" id="about-toggle" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About DASH <span class="caret"></span></a>
-          <ul class="dropdown-menu" aria-labelledby="about-toggle">
-            <li><a href="{{ site.baseurl }}/about/">About DASH</a></li>
-            <li><a href="{{ site.baseurl }}/features/">Featured Works</a></li>
-            <li><a href="{{ site.baseurl }}/termsofuse/" >Terms of Use</a></li>
-            <li><a href="{{ site.baseurl }}/privacy-policy-dash-repository/" title="Privacy Policy for DASH Repository">Privacy Policy</a></li>
-          </ul>
-      </li>
-      <li class="dropdown">
-          <a href="#" id="deposit-toggle" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Deposit Your Work <span class="caret"></span></a>
-          <ul class="dropdown-menu" aria-labelledby="deposit-toggle">
-            <li><a href="{{ site.baseurl }}/deposit/" >Deposit Your Work</a></li>
-            <li><a href="{{ site.baseurl }}/proxy/" >Assistance Authorization</a></li>
-            <li><a href="{{ site.baseurl }}/fellows/" >OA Fellows</a></li>
-            <li><a href="{{ site.baseurl }}/manual-deposit/" >Manual Deposit</a></li>
-          </ul>
-      </li>
-      <li><a href="{{ site.baseurl }}/faq/" >DASH FAQ</a></li>
-      <li><a href="http://osc.hul.harvard.edu/" title="Office for Scholarly Communication">OSC</a></li>
-    </ul>
+    <li><a href="/" >DASH Home</a></li>
+    <li><a href="http://dash.harvard.edu/community-list" >Browse &amp; Search</a></li>
+    <li><a href="{{ site.baseurl }}/mydash/" >DASH Stats</a></li>
+    <li class="dropdown">
+      <a href="#" id="about-toggle" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About DASH <span class="caret"></span></a>
+      <ul class="dropdown-menu" aria-labelledby="about-toggle">
+        <li><a href="{{ site.baseurl }}/about/">About DASH</a></li>
+        <li><a href="https://dash.harvard.edu/stories">DASH Stories</a></li>
+        <li><a href="{{ site.baseurl }}/features/">Featured Works</a></li>
+        <li><a href="{{ site.baseurl }}/termsofuse/">Terms of Use</a></li>
+        <li><a href="{{ site.baseurl }}/privacy-policy-dash-repository/" title="Privacy Policy for DASH Repository">Privacy Policy</a></li>
+      </ul>
+    </li>
+    <li class="dropdown">
+      <a href="#" id="deposit-toggle" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Deposit Your Work <span class="caret"></span></a>
+      <ul class="dropdown-menu" aria-labelledby="deposit-toggle">
+        <li><a href="{{ site.baseurl }}/deposit/" >Deposit Your Work</a></li>
+        <li><a href="{{ site.baseurl }}/proxy/" >Assistance Authorization</a></li>
+        <li><a href="{{ site.baseurl }}/fellows/" >OA Fellows</a></li>
+        <li><a href="{{ site.baseurl }}/manual-deposit/" >Manual Deposit</a></li>
+      </ul>
+    </li>
+    <li><a href="{{ site.baseurl }}/faq/" >DASH FAQ</a></li>
+    <li><a href="http://osc.hul.harvard.edu/" title="Office for Scholarly Communication">OSC</a></li>
   </ul>
 </nav>
