Correct invalid html.

--- a/app/_includes/sidebars/default.html
+++ b/app/_includes/sidebars/default.html
@@ -1,10 +1,10 @@
 <h2 class="stats">MyDASH Statistics</h2>
 <div class="osc-carousel">
   <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#downloads" aria-controls="home" role="tab" data-toggle="tab"><span class="sr-only">Downloads by Date</span><span aria-hidden="true">+</span></a></li>
-    <li role="presentation"><a href="#countries" aria-controls="profile" role="tab" data-toggle="tab"><span class="sr-only">Downloads by Country</span><span aria-hidden="true">+</span></a></li>
-    <li role="presentation"><a href="#posted" aria-controls="messages" role="tab" data-toggle="tab"><span class="sr-only">Works Posted</span><span aria-hidden="true">+</span></a></li>
-    <li role="presentation"><a href="#stories" aria-controls="settings" role="tab" data-toggle="tab"><span class="sr-only">User Stories</span><span aria-hidden="true">+</span></a></li>
+    <li role="presentation" class="active"><a href="#downloads" aria-controls="downloads" role="tab" data-toggle="tab"><span class="sr-only">Downloads by Date</span><span aria-hidden="true">+</span></a></li>
+    <li role="presentation"><a href="#countries" aria-controls="countries" role="tab" data-toggle="tab"><span class="sr-only">Downloads by Country</span><span aria-hidden="true">+</span></a></li>
+    <li role="presentation"><a href="#posted" aria-controls="posted" role="tab" data-toggle="tab"><span class="sr-only">Works Posted</span><span aria-hidden="true">+</span></a></li>
+    <li role="presentation"><a href="#stories" aria-controls="stories" role="tab" data-toggle="tab"><span class="sr-only">User Stories</span><span aria-hidden="true">+</span></a></li>
   </ul>
 
   <!-- Tab panes -->
