--- a/app/_includes/head.html
+++ b/app/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %}{{ page.title | append: " | " | append: site.title  }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description | strip_newlines }}{% endif %}">
+<!--   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | markdownify | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description | strip_newlines }}{% endif %}"> -->
 
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
   <link rel="canonical" href="{{site.url}}{{ page.url | replace:'index.html',''}}">
