Now that drupal-dash is backup, adapt accordingly.

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -8,7 +8,7 @@
   <ul class="nav nav-pills">
     <li><a href="/" >DASH Home</a></li>
     <li><a href="http://dash.harvard.edu/community-list" >Browse &amp; Search</a></li>
-    <li><a href="{{ site.baseurl }}/mydash/" >DASH Stats</a></li>
+    <li><a href="https://osc.hul.harvard.edu/dash/mydash" >DASH Stats</a></li>
     <li class="dropdown">
       <a href="#" id="about-toggle" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About DASH <span class="caret"></span></a>
       <ul class="dropdown-menu" aria-labelledby="about-toggle">
@@ -23,7 +23,7 @@
       <a href="#" id="deposit-toggle" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Deposit Your Work <span class="caret"></span></a>
       <ul class="dropdown-menu" aria-labelledby="deposit-toggle">
         <li><a href="{{ site.baseurl }}/deposit/" >Deposit Your Work</a></li>
-        <li><a href="{{ site.baseurl }}/proxy/" >Assistance Authorization</a></li>
+        <li><a href="https://osc.hul.harvard.edu/dash/proxy/webform" >Assistance Authorization</a></li>
         <li><a href="{{ site.baseurl }}/fellows/" >OA Fellows</a></li>
         <li><a href="{{ site.baseurl }}/manual-deposit/" >Manual Deposit</a></li>
       </ul>
