--- a/app/_includes/sidebars/default.html
+++ b/app/_includes/sidebars/default.html
@@ -10,15 +10,15 @@
   <!-- Tab panes -->
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="downloads">
-      <a href="#"><img src="{{site.baseurl}}/assets/img/downloads_chart.png" alt="" height="92" width="138">
-      <span>6.1 million downloads</span></a>
+      <a href="https://osc.hul.harvard.edu/dash/mydash?v=timeline&t=1&gi=alldash"><img src="{{site.baseurl}}/assets/img/downloads_chart.png" alt="" height="92" width="138">
+      <span>6.2 million downloads</span></a>
     </div>
     <div role="tabpanel" class="tab-pane" id="countries">
-          <a href="{{site.baseurl}}/mydash/"><img src="{{site.baseurl}}/assets/img/downloads_map.png" alt="" height="92" width="138">
+          <a href="https://osc.hul.harvard.edu/dash/mydash?v=geomap&t=1&gi=alldash"><img src="{{site.baseurl}}/assets/img/downloads_map.png" alt="" height="92" width="138">
           <span>237 downloading countries</span></a>
     </div>
     <div role="tabpanel" class="tab-pane" id="posted">
-          <a href="{{site.baseurl}}/mydash/"><img src="{{site.baseurl}}/assets/img/posted.png" alt="" height="92" width="138">
+          <a href="https://osc.hul.harvard.edu/dash/mydash?v=timeline&t=4&gi=alldash"><img src="{{site.baseurl}}/assets/img/posted.png" alt="" height="92" width="138">
           <span>26,413 works</span></a>
     </div>
     <div role="tabpanel" class="tab-pane" id="stories">
