--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -22,7 +22,7 @@
     <li class="dropdown">
       <a href="#" id="deposit-toggle" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Deposit Your Work <span class="caret"></span></a>
       <ul class="dropdown-menu" aria-labelledby="deposit-toggle">
-        <li><a href="{{ site.baseurl }}/deposit/" >Deposit Your Work</a></li>
+        <li><a href="https://osc.hul.harvard.edu/dash/quicksubmit" >Quick Submit</a></li>
         <li><a href="https://osc.hul.harvard.edu/dash/proxy/webform" >Assistance Authorization</a></li>
         <li><a href="{{ site.baseurl }}/fellows/" >OA Fellows</a></li>
         <li><a href="{{ site.baseurl }}/manual-deposit/" >Manual Deposit</a></li>
