Add trending works to sidebar.

--- a/app/_includes/sidebars/default.html
+++ b/app/_includes/sidebars/default.html
@@ -46,3 +46,7 @@
 <li><a href="https://dash.harvard.edu/browse?type=dateissued">By Issue Date</a></li>
 <li><a href="https://dash.harvard.edu/browse?type=dateaccessioned">By Submit Date</a></li>
 </ul>
+
+<h2>Trending Works</h2>
+<ol class="trending-works">
+</ol>
