Load stats sidebar via jsonp.

--- a/app/_includes/sidebars/default.html
+++ b/app/_includes/sidebars/default.html
@@ -1,29 +1,29 @@
 <h2 class="stats">MyDASH Statistics</h2>
 <div class="osc-carousel">
   <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#downloads" aria-controls="downloads" role="tab" data-toggle="tab"><span class="sr-only">Downloads by Date</span><span aria-hidden="true">+</span></a></li>
-    <li role="presentation"><a href="#countries" aria-controls="countries" role="tab" data-toggle="tab"><span class="sr-only">Downloads by Country</span><span aria-hidden="true">+</span></a></li>
+    <li role="presentation" class="active"><a href="#countries" aria-controls="countries" role="tab" data-toggle="tab"><span class="sr-only">Downloads by Country</span><span aria-hidden="true">+</span></a></li>
+    <li role="presentation"><a href="#downloads" aria-controls="downloads" role="tab" data-toggle="tab"><span class="sr-only">Downloads by Date</span><span aria-hidden="true">+</span></a></li>
     <li role="presentation"><a href="#posted" aria-controls="posted" role="tab" data-toggle="tab"><span class="sr-only">Works Posted</span><span aria-hidden="true">+</span></a></li>
     <li role="presentation"><a href="#stories" aria-controls="stories" role="tab" data-toggle="tab"><span class="sr-only">User Stories</span><span aria-hidden="true">+</span></a></li>
   </ul>
 
   <!-- Tab panes -->
   <div class="tab-content">
-    <div role="tabpanel" class="tab-pane active" id="downloads">
-      <a href="https://osc.hul.harvard.edu/dash/mydash?v=timeline&t=1&gi=alldash"><img src="{{site.baseurl}}/assets/img/downloads_chart.png" alt="" height="92" width="138">
-      <span>6.2 million downloads</span></a>
+    <div role="tabpanel" class="tab-pane active" id="countries">
+         <!--  <a href="https://osc.hul.harvard.edu/dash/mydash?v=geomap&t=1&gi=alldash"><img src="{{site.baseurl}}/assets/img/downloads_map.png" alt="" height="92" width="138">
+          <span>237 downloading countries</span></a> -->
     </div>
-    <div role="tabpanel" class="tab-pane" id="countries">
-          <a href="https://osc.hul.harvard.edu/dash/mydash?v=geomap&t=1&gi=alldash"><img src="{{site.baseurl}}/assets/img/downloads_map.png" alt="" height="92" width="138">
-          <span>237 downloading countries</span></a>
+    <div role="tabpanel" class="tab-pane" id="downloads">
+      <!-- <a href="https://osc.hul.harvard.edu/dash/mydash?v=timeline&t=1&gi=alldash"><img src="{{site.baseurl}}/assets/img/downloads_chart.png" alt="" height="92" width="138">
+      <span>6.2 million downloads</span></a> -->
     </div>
     <div role="tabpanel" class="tab-pane" id="posted">
-          <a href="https://osc.hul.harvard.edu/dash/mydash?v=timeline&t=4&gi=alldash"><img src="{{site.baseurl}}/assets/img/posted.png" alt="" height="92" width="138">
-          <span>26,413 works</span></a>
+          <!-- <a href="https://osc.hul.harvard.edu/dash/mydash?v=timeline&t=4&gi=alldash"><img src="{{site.baseurl}}/assets/img/posted.png" alt="" height="92" width="138">
+          <span>26,413 works</span></a> -->
     </div>
     <div role="tabpanel" class="tab-pane" id="stories">
-          <a href="https://dash.harvard.edu/stories"><img src="{{site.baseurl}}/assets/img/stories.png" alt="" height="92" width="138">
-          <span>1,277 user stories</span></a>
+          <!-- <a href="https://dash.harvard.edu/stories"><img src="{{site.baseurl}}/assets/img/stories.png" alt="" height="92" width="138">
+          <span>1,277 user stories</span></a> -->
     </div>
   </div>
 </div>
