Fix id of stories panel in sidebar, so it works as-is in the stories app as well as here.

--- a/app/_includes/sidebars/default.html
+++ b/app/_includes/sidebars/default.html
@@ -4,7 +4,7 @@
     <li role="presentation" class="active"><a href="#countries" aria-controls="countries" role="tab" data-toggle="tab"><span class="sr-only">Downloads by Country</span><span aria-hidden="true">+</span></a></li>
     <li role="presentation"><a href="#downloads" aria-controls="downloads" role="tab" data-toggle="tab"><span class="sr-only">Downloads by Date</span><span aria-hidden="true">+</span></a></li>
     <li role="presentation"><a href="#posted" aria-controls="posted" role="tab" data-toggle="tab"><span class="sr-only">Works Posted</span><span aria-hidden="true">+</span></a></li>
-    <li role="presentation"><a href="#stories" aria-controls="stories" role="tab" data-toggle="tab"><span class="sr-only">User Stories</span><span aria-hidden="true">+</span></a></li>
+    <li role="presentation"><a href="#stories-panel" aria-controls="stories-panel" role="tab" data-toggle="tab"><span class="sr-only">User Stories</span><span aria-hidden="true">+</span></a></li>
   </ul>
 
   <!-- Tab panes -->
@@ -15,7 +15,7 @@
     </div>
     <div role="tabpanel" class="tab-pane" id="posted">
     </div>
-    <div role="tabpanel" class="tab-pane" id="stories">
+    <div role="tabpanel" class="tab-pane" id="stories-panel">
     </div>
   </div>
 </div>
