--- a/app/_includes/head.html
+++ b/app/_includes/head.html
@@ -2,6 +2,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  {% if page.url == "/" %}<meta name="google-site-verification" content="Knx5yVDQ_EWYl1QgGy9Ff9OxaEkMxgifTE-MASfUI6Q" />{% endif %}
 
   <title>{% if page.title %}{{ page.title | append: " | " | append: site.title  }}{% else %}{{ site.title }}{% endif %}</title>
 <!--   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | markdownify | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description | strip_newlines }}{% endif %}"> -->
