Add section tags to sidebar.

--- a/app/_includes/sidebars/default.html
+++ b/app/_includes/sidebars/default.html
@@ -1,3 +1,4 @@
+<section>
 <h2 class="stats">MyDASH Statistics</h2>
 <div class="osc-carousel">
   <ul class="nav nav-tabs" role="tablist">
@@ -19,7 +20,9 @@
     </div>
   </div>
 </div>
+</section>
 
+<section>
 <h2>Search</h2>
 <ul><li><a href="https://dash.harvard.edu/search">Keyword Search</a></li>
 <li><a href="https://dash.harvard.edu/advanced-search">Advanced Search</a></li>
@@ -27,7 +30,9 @@
 <form id="aspect_artifactbrowser_SimpleSearch_div_general-query" class="ds-interactive-div secondary search" action="https://dash.harvard.edu/search" method="get">
 <div class="ds-form-content"><input id="aspect_artifactbrowser_SimpleSearch_field_query" class="ds-text-field" name="query" type="text"></div>
 </form>
+</section>
 
+<section>
 <h2>Browse</h2>
 <ul><li><a href="https://dash.harvard.edu/community-list">Communities &amp; Collections</a></li>
 <li><a href="https://dash.harvard.edu/browse?type=harvardAuthor">Harvard-affiliated Authors</a></li>
@@ -38,7 +43,10 @@
 <li><a href="https://dash.harvard.edu/browse?type=dateissued">By Issue Date</a></li>
 <li><a href="https://dash.harvard.edu/browse?type=dateaccessioned">By Submit Date</a></li>
 </ul>
+</section>
 
+<section>
 <h2>Trending Works</h2>
 <ol class="trending-works">
 </ol>
+</section>
