https instead of http

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -7,7 +7,7 @@
 <nav role="navigation" aria-label="main">
   <ul class="nav nav-pills">
     <li><a href="/" >DASH Home</a></li>
-    <li><a href="http://dash.harvard.edu/community-list" >Browse &amp; Search</a></li>
+    <li><a href="https://dash.harvard.edu/community-list" >Browse &amp; Search</a></li>
     <li><a href="https://osc.hul.harvard.edu/dash/mydash" >DASH Stats</a></li>
     <li class="dropdown">
       <a href="#" id="about-toggle" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About DASH <span class="caret"></span></a>
@@ -28,6 +28,6 @@
       </ul>
     </li>
     <li><a href="{{ site.baseurl }}/faq/" >DASH FAQ</a></li>
-    <li><a href="http://osc.hul.harvard.edu/" title="Office for Scholarly Communication">OSC</a></li>
+    <li><a href="https://osc.hul.harvard.edu/" title="Office for Scholarly Communication">OSC</a></li>
   </ul>
 </nav>
