Simply navigation; make targets larger.

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -5,20 +5,8 @@
 </header>
 
 <nav role="navigation" aria-label="main">
-  <ul class="nav nav-pills">
-    <li><a href="/" >DASH Home</a></li>
+  <ul class="nav nav-pills main-nav">
     <li><a href="https://dash.harvard.edu/community-list" >Browse &amp; Search</a></li>
-    <li><a href="https://osc.hul.harvard.edu/dash/mydash" >DASH Stats</a></li>
-    <li class="dropdown">
-      <a href="#" id="about-toggle" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About DASH <span class="caret"></span></a>
-      <ul class="dropdown-menu" aria-labelledby="about-toggle">
-        <li><a href="{{ site.baseurl }}/about/">About DASH</a></li>
-        <li><a href="https://dash.harvard.edu/stories">DASH Stories</a></li>
-        <li><a href="{{ site.baseurl }}/features/">Featured Works</a></li>
-        <li><a href="{{ site.baseurl }}/termsofuse/">Terms of Use</a></li>
-        <li><a href="{{ site.baseurl }}/privacy-policy-dash-repository/" title="Privacy Policy for DASH Repository">Privacy Policy</a></li>
-      </ul>
-    </li>
     <li class="dropdown">
       <a href="#" id="deposit-toggle" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Deposit Your Work <span class="caret"></span></a>
       <ul class="dropdown-menu" aria-labelledby="deposit-toggle">
@@ -27,7 +15,16 @@
         <li><a href="{{ site.baseurl }}/deposit/" >Ways to Deposit</a></li>
       </ul>
     </li>
-    <li><a href="{{ site.baseurl }}/faq/" >DASH FAQ</a></li>
-    <li><a href="https://osc.hul.harvard.edu/" title="Office for Scholarly Communication">OSC</a></li>
+    <li><a href="https://osc.hul.harvard.edu/dash/mydash" >Statistics</a></li>
+    <li><a href="https://dash.harvard.edu/stories">Stories</a></li>
+    <li class="dropdown">
+      <a href="#" id="about-toggle" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
+      <ul class="dropdown-menu" aria-labelledby="about-toggle">
+        <li><a href="{{ site.baseurl }}/about/">About DASH</a></li>
+        <li><a href="{{ site.baseurl }}/features/">Featured Works</a></li>
+        <li><a href="{{ site.baseurl }}/termsofuse/">Terms of Use</a></li>
+        <li><a href="{{ site.baseurl }}/privacy-policy-dash-repository/" title="Privacy Policy for DASH Repository">Privacy Policy</a></li>
+      </ul>
+    </li>
   </ul>
 </nav>
