Add DASHboard link to sidebars; remove trending works from front page sidebar.

--- a/app/_scss/_custom.scss
+++ b/app/_scss/_custom.scss
@@ -175,7 +175,12 @@ aside {
   h2 {
     font-size: 1.2em;
   }
-  
+
+  a.dashboard {
+    font-size: .69em;
+    padding-left: 10px;
+  }
+
 }
 
 footer {
