--- a/app/_includes/sidebars/default.html
+++ b/app/_includes/sidebars/default.html
@@ -1,52 +1,9 @@
-<section>
-<h2 class="stats">MyDASH Statistics</h2>
-<div class="osc-carousel">
-  <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#countries" aria-controls="countries" role="tab" data-toggle="tab"><span class="sr-only">Downloads by Country</span><span aria-hidden="true">+</span></a></li>
-    <li role="presentation"><a href="#downloads" aria-controls="downloads" role="tab" data-toggle="tab"><span class="sr-only">Downloads by Date</span><span aria-hidden="true">+</span></a></li>
-    <li role="presentation"><a href="#posted" aria-controls="posted" role="tab" data-toggle="tab"><span class="sr-only">Works Posted</span><span aria-hidden="true">+</span></a></li>
-    <li role="presentation"><a href="#stories-panel" aria-controls="stories-panel" role="tab" data-toggle="tab"><span class="sr-only">User Stories</span><span aria-hidden="true">+</span></a></li>
-  </ul>
-
-  <!-- Tab panes -->
-  <div class="tab-content">
-    <div role="tabpanel" class="tab-pane active" id="countries">
-    </div>
-    <div role="tabpanel" class="tab-pane" id="downloads">
-    </div>
-    <div role="tabpanel" class="tab-pane" id="posted">
-    </div>
-    <div role="tabpanel" class="tab-pane" id="stories-panel">
-    </div>
-  </div>
-</div>
-</section>
-
-<section>
-<h2>Search</h2>
-<ul><li><a href="https://dash.harvard.edu/search">Keyword Search</a></li>
-<li><a href="https://dash.harvard.edu/advanced-search">Advanced Search</a></li>
-</ul>
-<form id="aspect_artifactbrowser_SimpleSearch_div_general-query" class="ds-interactive-div secondary search" action="https://dash.harvard.edu/search" method="get">
-<div class="ds-form-content"><input id="aspect_artifactbrowser_SimpleSearch_field_query" class="ds-text-field" name="query" type="text"></div>
-</form>
-</section>
-
-<section>
-<h2>Browse</h2>
-<ul><li><a href="https://dash.harvard.edu/community-list">Communities &amp; Collections</a></li>
-<li><a href="https://dash.harvard.edu/browse?type=harvardAuthor">Harvard-affiliated Authors</a></li>
-<li><a href="https://dash.harvard.edu/browse?type=author">All Authors</a></li>
-<li><a href="https://dash.harvard.edu/browse?type=title">Titles</a></li>
-<li><a href="https://dash.harvard.edu/browse?type=subject">Keywords</a></li>
-<li><a href="https://dash.harvard.edu/browse?type=department">FAS Departments</a></li>
-<li><a href="https://dash.harvard.edu/browse?type=dateissued">By Issue Date</a></li>
-<li><a href="https://dash.harvard.edu/browse?type=dateaccessioned">By Submit Date</a></li>
-</ul>
-</section>
+{% include sidebars/links.html %}
 
 <section>
 <h2>Trending Works</h2>
 <ol class="trending-works">
 </ol>
 </section>
+
+{% include sidebars/dashboard.html %}
