Change front page content to info blurb and trending works; use special sidebar.

--- a/app/_scss/_custom.scss
+++ b/app/_scss/_custom.scss
@@ -319,3 +319,14 @@ main {
   }
 
 }
+
+// Front page tweaks
+#author-info {
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+ol.trending-works {
+    line-height: 2;
+}
+
