--- a/app/_layouts/front.html
+++ b/app/_layouts/front.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">  
+<html lang="en">
   {% include head.html %}
   <body>
-  <div class="container">
-    {% include header.html %}   
+  <div class="container front-page">
+    {% include header.html %}
     <main>
       <p id="main" tabIndex="-1" class="sr-only">Main Content</p>
       <div class="main-content">
@@ -11,7 +11,7 @@
       </div>
     </main>
     <aside>
-      {% capture sidebar %}{% if page.sidebar %}{% include sidebars/{{page.sidebar}}.html %}{% else %}{% include sidebars/default.html %}{% endif %}{% endcapture %} 
+      {% capture sidebar %}{% if page.sidebar %}{% include sidebars/{{page.sidebar}}.html %}{% else %}{% include sidebars/default.html %}{% endif %}{% endcapture %}
       {{ sidebar | markdownify }}
     </aside>
     {% include footer.html %}
