Remove underlines from sidebar.

--- a/app/_scss/_custom.scss
+++ b/app/_scss/_custom.scss
@@ -171,6 +171,10 @@ aside {
     font-size: 1.2em;
   }
 
+  a {
+    text-decoration: none;
+  }
+
   a.dashboard {
     font-size: .69em;
     padding-left: 10px;
